# radar-demo

./: .gitattributes  .gitignore  .update-hook.sh  README.md  start_demo.sh  update.sh
ansible/roles/radardemo_py_infra/files/: README.md  pyproject.toml
ansible/roles/radardemo_py_infra/files/radardemoinfra/: fpga_serial.py
backend/: pyproject.toml  run.py  test.py
backend/app/: __init__.py  package.py
backend/app/logic/: benchmark.py  cfar.py  config.py  flush_card.py  image_utils.py  logging.py  model.py  output_exception.py  radar_simulation.py  settings.py  state.py  status.py  timer.py
backend/app/static/: .gitattributes  3rdpartylicenses.txt  conceptcar.f1c88890c0a911f1a2fee442e3268363.glb  main.151f7c31c0a278b7.js  main.1b324dffc008ab2c.js  main.1d3814093b2f78c2.js  main.20b6e5b54d31eac0.js  main.272d6ee8f006e3e2.js  main.4de94dba7565dea4.js  main.75bc77199b43d611.js  main.8057dc8ab6d8d72c.js  main.9e928addfffe4b94.js  main.a49527b2aa6200ff.js  main.b440cf8c903b5230.js  main.bc9c0744025e3518.js  main.cf511d6e5dab9bbc.js  main.e4eea8c266c91434.js  main.e5c75db5c15bfbdb.js  main.ea9c05e5438a93cd.js  polyfills.d096b3a6b3cf67dc.js  runtime.b7ab6d1c6fe848d3.js  styles.59f876fe68527434.css  styles.828a71913be07c34.css  styles.9b9843f5b76673c5.css  styles.cacaa3db09bca665.css  styles.d33b91c9c077bf43.css  styles.ed74b788aee9500f.css  styles.fe0c860d3f111b51.css
backend/app/static/assets/: conceptcar.glb  porsche.glb
backend/app/templates/: index.html
backend/app/views/: main.py
backend/position/: __init__.py  position.py
backend/tests/: test_flush.py
(+49 files in other folders)
